Fixed the scrollbar mixup and deleted redundant files

--- a/app/assets/stylesheets/sidebar.css.scss
+++ b/app/assets/stylesheets/sidebar.css.scss
@@ -38,22 +38,9 @@
 	#activity-stream {
 		ul {
 			margin:2px 0 10px 0;
-<<<<<<< HEAD
-			list-style-type:none;
-			max-height:260px;
-		}
-		@extend .scrollbar
-	}
-	#activity-stream ul {
-		overflow:hidden;
-	}
-	#activity-stream ul:hover {
-		overflow-y:scroll;
-=======
 			overflow-y:scroll;
 			max-height:240px;
 		}
->>>>>>> parent of df2b0b6... Deleted redundant files and added scrollbar on hover
 	}
 	#recommendations {
   ul {
